# covid-stat

./: README.md  pyproject.toml  source.html
covid_stat/: db.sqlite3
covid_stat/covid_stat/: asgi.py  settings.py  urls.py  wsgi.py
covid_stat/main/: models.py  views.py
covid_stat/main/migrations/: 0001_initial.py
covid_stat/main/static/: style.css
covid_stat/main/templates/main/: index.html
covid_stat/main/utils/: html_parser.sh  utils.py
