[tool.poetry]
name = "test_app"
version = "0.1.0"
description = ""
authors = ["ANnick2908 <annick2908@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Django = "^4.0.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
